V 3.0 - LogBack-Usage.md updated (WIP)